RESOLVED FIXED172945
We don't properly parse init_expr when the opcode is an unexpected opcode
https://bugs.webkit.org/show_bug.cgi?id=172945
Summary We don't properly parse init_expr when the opcode is an unexpected opcode
Saam Barati
Reported 2017-06-05 17:39:40 PDT
...
Attachments
patch (1.31 KB, patch)
2017-06-05 17:42 PDT, Saam Barati
no flags
Saam Barati
Comment 1 2017-06-05 17:42:43 PDT
Saam Barati
Comment 2 2017-06-05 17:51:40 PDT
Comment on attachment 312040 [details] patch Hmm, the test is still failing locally. Very weird.
JF Bastien
Comment 3 2017-06-05 18:07:09 PDT
Comment on attachment 312040 [details] patch r=me
Saam Barati
Comment 4 2017-06-05 18:12:00 PDT
(In reply to Saam Barati from comment #2) > Comment on attachment 312040 [details] > patch > > Hmm, the test is still failing locally. Very weird. Nevermind, ignore me. It passes.
WebKit Commit Bot
Comment 5 2017-06-05 19:59:58 PDT
Comment on attachment 312040 [details] patch Clearing flags on attachment: 312040 Committed r217814: <http://trac.webkit.org/changeset/217814>
WebKit Commit Bot
Comment 6 2017-06-05 19:59:59 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.