We don't properly parse init_expr when the opcode is an unexpected opcode https://bugs.webkit.org/show_bug.cgi?id=172945

Reviewed by JF Bastien.

The bug is a simple typo. It should use the constant
`true` instead of `false` when invoking the WASM_PARSER_FAIL_IF
macro. This failure is already caught by spec tests that fail
on arm64 devices.

* wasm/WasmModuleParser.cpp:


Canonical link: https://commits.webkit.org/189839@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217814 268f45cc-cd09-0410-ab3c-d52691b4dbfc